--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ header {
   z-index: 100;
 }
 
-nav {
+#hamburgerNav {
   cursor: pointer;
   left: 50px;
   position: fixed;
@@ -15,18 +15,51 @@ nav {
   z-index: 999;
 }
 
-nav div {
+#hamburgerNav div {
   background-color: white;
   height: 3px;
+  position: relative;
   width: 50px;
 }
 
-nav div:first-child {
+.firstLine {
   margin-bottom: 10px;
+  transition: top .25s, transform .25s;
 }
 
-nav div:last-child {
+.lastLine {
   margin-top: 10px;
+  transition: bottom .25s, transform .25s;
+}
+
+.firstLine-clicked {
+  top: 13px;
+  transform: rotate(45deg);
+}
+
+.middleLine-clicked {
+  visibility: hidden;
+}
+
+.lastLine-clicked {
+  bottom: 12px;
+  transform: rotate(-45deg);
+}
+
+.nav {
+  background-color: gray;
+  height: 100%;
+  opacity: 0;
+  position: fixed;
+  transition: opacity .5s;
+  visibility: hidden;
+  width: 100%;
+  z-index: 998;
+}
+
+.nav-visible {
+  opacity: 1;
+  visibility: visible;
 }
 
 main {
