--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,10 @@ header {
 }
 
 #hamburgerNav {
+  background: none;
+  border: none;
   cursor: pointer;
+  height: 50px;
   left: 50px;
   position: fixed;
   top: 30px;
