bio section and some responsive updates

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 #introContainer {
   background-image: url('../media/giphy-downsized-large.gif');
   background-size: 100% 100%;
@@ -25,6 +29,10 @@ header {
   top: -50px;
   transition: transform .5s, opacity 1s;
   z-index: 100;
+}
+
+#headerLogo {
+  width: 350px;
 }
 
 .header-visible {
@@ -104,19 +112,48 @@ main {
   position: relative;
 }
 
-#stars {
+#starsContainer {
   background: linear-gradient(90deg, rgba(9,11,18,1) 0%, rgba(18,25,35,1) 50%, rgba(9,11,18,1) 100%);
   /* background: black; */
-  height: 5000px;
+  height: 100vh;
   position: fixed;
+  width: 100vw;
   z-index: -1;
 }
 
-#mainContainer {
-  height: 5000px;
+.star-layer {
+  height: 100%;
   width: 100%;
 }
 
+.star {
+  background-color: white;
+  position: absolute;
+}
+
+#mainContainer {
+  /* height: 5000px; */
+  width: 100%;
+}
+
+/* ABOUT */
+#about {
+  background-color: black;
+}
+
+#aboutGradient { 
+  background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 75%);
+  height: 100%;
+  width: 100%;
+}
+
+#bioTextContainer {
+  top: 60%;
+}
+
+#bioText {
+  max-width: 1500px;
+}
 
 /* helpers */
 .fadeout {
@@ -125,4 +162,21 @@ main {
 
 .mbAlot {
   margin-bottom: 32rem;
+}
+
+@media only screen and (max-width: 30rem) {
+  #hamburgerNav {
+    left: 5px;
+    top: 10px;
+  }
+
+  header {
+    justify-content: flex-end;
+    margin-top: 15px;
+    padding-right: 10px;
+  }
+
+  #headerLogo {
+    width: 300px;
+  }
 }
