--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,12 @@
 /* SEMANTICS */
 html {
   scroll-behavior: smooth;
+  font-family: 'Space Mono', monospace;
+}
+
+button {
+  background: none;
+  border: none;
 }
 
 /* INTRO */
@@ -72,18 +78,18 @@ header {
   transition: opacity .5s ease-out;
 }
 
-#hamburgerNav {
-  background: none;
-  border: none;
+.hamburgerNav {
   cursor: pointer;
   height: 50px;
-  left: 50px;
+  left: 20px;
+  opacity: 1;
   position: fixed;
-  top: 30px;
-  z-index: 999;
+  top: 15px;
+  transition: opacity .5s ease-out;
+  z-index: 100;
 }
 
-#hamburgerNav div {
+.hambLine {
   background-color: white;
   height: 3px;
   position: relative;
@@ -115,13 +121,22 @@ header {
 }
 
 .nav {
-  /* max-width: 500px; */
+  background-color: black;
+  height: 100%;
+  opacity: 0;
   position: fixed;
-  z-index: 998;
+  transition: opacity .5s;
+  width: 100%;
+  z-index: 99;
+  visibility: hidden;
+}
 
-  /* height: 100vh;
-  width: 100vw;
-  background-color: rgba(0,0,0,.75); */
+#nav-background-image {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 .nav-content {
@@ -129,13 +144,7 @@ header {
   flex-direction: column;
 }
 
-.nav-content a {
-  color: black;
-  text-decoration: none;
-}
-
 .nav-item {
-  background-color: white;
   left: -25%;
   opacity: 0;
   position: relative;
@@ -143,26 +152,42 @@ header {
   visibility: hidden;
 }
 
-.nav-item:hover {
+a.nav-item {
+  color: white;
+  text-decoration: none;
+}
 
+a.nav-item:hover {
+  opacity: 1;
 }
 
 .nav-item.nav-item-visible {
-  opacity: 1;
+  opacity: .7;
   transform: translateX(25%);
   visibility: visible;
 }
 
-/* MAIN CONTENT */
-main {
-  height: 4000px;
-  position: relative;
-  top: 100vh;
+.nav-hover-overlay {
+  background-color: black;
+  height: 100vh;
+  left: 0;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  transition: opacity .25s;
+  width: 100vw;
+  z-index: 98;
 }
 
-#mainContainer {
-  /* height: 5000px; */
-  width: 100%;
+.nav-content-visible:hover ~ .nav-hover-overlay {
+  opacity: .75;
+}
+
+/* MAIN CONTENT */
+main {
+  position: relative;
+  top: 100vh;
+  /* z-index: 2; */
 }
 
 .topLogo {
@@ -172,12 +197,12 @@ main {
   top: -50px;
   transition: transform .5s, opacity 1s;
   width: 100%;
-  z-index: 100;
+  z-index: 99;
 }
 
 .topLogo-visible {
   opacity: 1;
-  transform: translateY(50px);
+  transform: translateY(62px);
 }
 
 .topLogo img {
@@ -186,7 +211,7 @@ main {
 
 /* ABOUT */
 #about {
-  background-color: black;
+  /* background-color: black; */
 }
 
 #aboutGradient { 
@@ -195,8 +220,12 @@ main {
   width: 100%;
 }
 
+#bioImage {
+  transform: translateY(30%);
+}
+
 #bioTextContainer {
-  top: 60%;
+  background-color: rgba(0,0,0,.75); 
 }
 
 #bioText {
@@ -204,12 +233,42 @@ main {
 }
 
 /* HELPERS */
-.fadeout {
+.hide {
   opacity: 0;
+  visibility: hidden;
+}
+
+.show {
+  opacity: 1;
+  visibility: visible;
 }
 
 .mbAlot {
   margin-bottom: 32rem;
+}
+
+.backToTop {
+  animation: back2top 2s infinite ease-in-out;
+  bottom: 25px;
+  cursor: pointer;
+  display: block;
+  opacity: 0;
+  padding: 0 10px;
+  position: fixed;
+  right: -50px;
+  transition: all .5s;
+  z-index: 3;
+}
+
+.backToTop-visible {
+  opacity: 1;
+  right: 15px;
+}
+
+@keyframes back2top {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-5px); }
+  100% { transform: translateY(0); }
 }
 
 /* CUSTOM AOS */
@@ -225,12 +284,30 @@ main {
 
 /* MEDIA QUERIES */
 @media only screen and (max-width: 30rem) {
-  #hamburgerNav {
+  #bioTextContainer {
+    top: 100%;
+  }
+
+  .hamburgerNav {
     left: 5px;
-    top: 10px;
+    top: 5px;
+  }
+
+  .hambLine {
+    height: 2px;
+    position: relative;
+    width: 40px;
   }
 
   .topLogo {
+    text-align: right;
+  }
+
+  .topLogo img {
     width: 300px;
+  }
+
+  .topLogo-visible {
+    transform: translateY(62px);
   }
 }
