--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ header {
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  transition: opacity .5s ease-out;
+  transition: opacity .5s ease-out, visibility .5s;
 }
 
 .hamburgerNav {
@@ -125,7 +125,7 @@ header {
   height: 100%;
   opacity: 0;
   position: fixed;
-  transition: opacity .5s;
+  transition: opacity .5s, visibility .5s;
   width: 100%;
   z-index: 99;
   visibility: hidden;
@@ -211,7 +211,7 @@ main {
 
 /* ABOUT */
 #about {
-  /* background-color: black; */
+
 }
 
 #aboutGradient { 
@@ -230,6 +230,15 @@ main {
 
 #bioText {
   max-width: 1500px;
+}
+
+/* #RELEASES */
+.releases-list li {
+  position: relative;
+}
+
+.releases-list iframe {
+  /* max-width: 100%; */
 }
 
 /* HELPERS */
@@ -281,6 +290,23 @@ main {
   opacity: 0 !important;
 }
 
+/* [data-aos] {
+  visibility: hidden;
+}
+[data-aos].aos-animate {
+  visibility: visible;
+} */
+
+/* footer  */
+footer {
+  background-color: white;
+  display: block;
+  width: 100%;
+}
+
+footer a {
+  color: unset;
+}
 
 /* MEDIA QUERIES */
 @media only screen and (max-width: 30rem) {
@@ -309,5 +335,18 @@ main {
 
   .topLogo-visible {
     transform: translateY(62px);
+  }
+}
+
+@media only screen and (min-width: 60rem) {
+  .about-offset {
+    transform: translateY(-20%);
+  }
+
+  .releases-list li:nth-child(even) {
+    left: 100%;
+  }
+  .releases-list li:nth-child(odd) {
+    right: 100%;
   }
 }
