--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ button {
 #introLogo {
   animation: introLogoAnimation 5s ease-in;
   z-index: 1;
+  width: 250px;
 }
 
 @keyframes introLogoAnimation {
@@ -211,7 +212,7 @@ main {
 }
 
 .topLogo img {
-  width: 350px;
+  height: 45px;
 }
 
 /* ABOUT */
@@ -277,6 +278,10 @@ main {
   right: 15px;
 }
 
+.rotate-20 {
+  transform: rotate(20deg);
+}
+
 @keyframes back2top {
   0% { transform: translateY(0); }
   50% { transform: translateY(-5px); }
@@ -299,6 +304,13 @@ main {
 [data-aos].aos-animate {
   visibility: visible;
 } */
+
+/* SHOWS SECTION */
+.show-tickets-button {
+  -webkit-transform: skew(-20deg);
+  -ms-transform: skew(-20deg);
+  transform: skew(-20deg);
+}
 
 /* footer  */
 footer {
@@ -338,10 +350,6 @@ footer a {
     text-align: right;
   }
 
-  .topLogo img {
-    width: 300px;
-  }
-
   .topLogo-visible {
     transform: translateY(50px);
   }
@@ -354,6 +362,10 @@ footer a {
 
   #bioTextContainer {
     transform: translateY(-20%);
+  }
+
+  #introLogo {
+    width: 330px;
   }
 
   .mainLogo {
