Create header, add social links, add main nav menu, add logo, create necessary routing for links, download & add social icons to assets & header via import.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,11 @@
-// .App {
-//   text-align: center;
-// }
+@import './styles/partials/variables';
+
+
+.App {
+   //   text-align: center;
+   height: 100%;
+   background-color: $silver;
+}
 
 // .App-logo {
 //   height: 40vmin;
