--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,7 @@
 @use "./styles/partials/global" as *;
 @use "./styles/partials/variables" as *;
 @use "./styles/partials/mixins" as *;
+
+body {
+   height: 100%;
+}
