Fix header layout and add new breakpoint

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -9,5 +9,6 @@ $alabaster: #fafafa;
 
 // Breakpoints
 $tablet-breakpoint: 768px;
+$header-desktop-breakpoint: 1105px;
 $desktop-breakpoint: 1280px;
 $desktop-large-breakpoint: 1375px;
