--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,22 @@
+@import '../../styles/partials/mixins';
+@import '../../styles/partials/variables';
+
 .header {
 	background-color: #FFF;
 	padding: 0 40px;
+
+
+	@include tablet {
+		// min-height: 100vh;
+	}
+
+	@include desktop-header {
+		// min-height: 100vh;
+	}
+
+	@include desktop {
+		// min-height: 100vh;
+	}
 
 	&-nav {
 		padding: 24px 0;
