--- a/src/components/RecentReleases/RecentReleases.scss
+++ b/src/components/RecentReleases/RecentReleases.scss
@@ -8,6 +8,7 @@
 	justify-content: center;
 	align-items: center;
 	overflow: auto;
+	padding: 48px;
 
 	@include tablet {
 		// min-height: 100vh;
@@ -21,7 +22,7 @@
 
 	&__header {
 		text-align: center;
-		margin-top: 52px;
+		// margin-top: 52px;
 		margin-bottom: 40px;
 	}
 
