finish tourdate styling

--- a/src/components/TourDates/TourDates.scss
+++ b/src/components/TourDates/TourDates.scss
@@ -87,8 +87,9 @@
 	}
 }
 
-.bit-social-share-icon-wrapper svg {
+.bit-social-share-icon-wrapper svg path {
 	fill: #fff !important;
+
 }
 
 .bit-location {
