--- a/src/components/RecentReleases/RecentReleases.scss
+++ b/src/components/RecentReleases/RecentReleases.scss
@@ -7,7 +7,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	overflow: auto;
+	// overflow: hidden;
 
 	@include tablet {
 		// min-height: 100vh;
@@ -29,20 +29,18 @@
 	&__releases {
 		display: flex;
 		gap: 24px;
-		// padding: 0 40px;
 		align-items: center;
 		justify-content: center;
 		flex-direction: column;
+		margin-bottom: 16px;
 
 		@include tablet {
 			flex-direction: row;
 			flex-wrap: wrap;
-			margin-bottom: 52px;
+			margin-bottom: 20px;
 		}
 
-		@include desktop-header {
-			// min-height: 100vh;
-		}
+		@include desktop-header {}
 
 		@include desktop {
 			flex-wrap: nowrap;
@@ -50,11 +48,165 @@
 
 		&--card {
 			max-width: 100%;
+			// position: relative;
 
 			@include tablet {
 				// width: 40%;
-				max-width: 40%;
+				// max-width: 40%;
+			}
+
+			@include desktop {
+				// width: 300px;
 			}
 		}
+
+		&--click-area {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 352px;
+			// z-index: 2;
+			cursor: pointer;
+			width: 300px;
+			// background-color: #000;
+			// opacity: 10%;
+
+			@include tablet {
+				// max-width: 40%;
+			}
+
+			@include desktop {
+				// width: 300px;
+			}
+		}
+	}
+
+	&__releases-container {
+		position: relative;
+		z-index: 0;
+
+		@include tablet {
+			width: 40%;
+		}
+	}
+}
+
+.soundcloud {
+	width: 100%;
+	max-width: 1200px;
+	overflow: hidden;
+	// height: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	@include tablet {
+		padding: 0 60px;
+	}
+
+	&__button {
+		@include button;
+		margin: 24px 0;
+		border-width: 0 1px;
+		font-weight: normal;
+		transition: background-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
+
+		@include desktop {
+			font-size: 18px;
+		}
+
+		&:hover {
+			border-width: 0 1px;
+			background-color: rgba(227, 227, 227, 0.6); // 
+			color: #000;
+		}
+
+		&--open {
+			@include button;
+			border-width: 0 1px;
+			font-size: 24px;
+			overflow: hidden;
+			font-weight: lighter;
+			transition: background-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
+
+			@include tablet {
+				font-size: 28px;
+			}
+
+			@include desktop {
+				font-size: 30px;
+			}
+
+			&:hover {
+				border-width: 0 1px;
+				background-color: rgba(227, 227, 227, 0.6); // 
+				color: #000;
+			}
+		}
+	}
+}
+
+// Soundcloud Animations
+.ani-expand {
+	animation: expand 0.8s ease-in-out forwards;
+	// margin-bottom: 40px;
+}
+
+.ani-contract {
+	animation: contract 0.8s ease-in-out forwards;
+}
+
+// Button Animations
+.button-show {
+	animation: button-show 0.8s ease-in-out forwards;
+}
+
+.button-hide {
+	animation: button-hide 0.8s ease-in-out forwards;
+}
+
+@keyframes expand {
+	0% {
+		max-height: 0;
+	}
+
+	100% {
+		max-height: 600px;
+	}
+}
+
+@keyframes contract {
+	0% {
+		max-height: 600px;
+	}
+
+	100% {
+		max-height: 0;
+	}
+}
+
+
+@keyframes button-show {
+	0% {
+		max-height: 0;
+		margin: 0;
+	}
+
+	100% {
+		max-height: 24px;
+		margin-bottom: 24px;
+	}
+}
+
+@keyframes button-hide {
+	0% {
+		max-height: 24px;
+		margin-bottom: 24px;
+	}
+
+	100% {
+		max-height: 0;
+		margin: 0;
 	}
 }
