--- a/src/components/SocialMediaLink/SocialMediaLink.scss
+++ b/src/components/SocialMediaLink/SocialMediaLink.scss
@@ -1,3 +1,13 @@
-i {
-	height: 18px;
+@import '../../styles/partials/mixins';
+@import '../../styles/partials/variables';
+
+
+.social-media-link {
+	&__img {
+		height: 24px;
+
+		@include desktop {
+			height: 18px;
+		}
+	}
 }
