--- a/src/components/TourDates/TourDates.scss
+++ b/src/components/TourDates/TourDates.scss
@@ -2,7 +2,7 @@
 
 .tourdates {
 	background-color: black;
-	background-image: url('../../assets/images/miscellaneous/NavMenuPicbackground.png');
+	background-image: url('../../assets/images/miscellaneous/DSC02298.jpeg');
 	background-size: cover;
 	background-position: center;
 	color: #fff;
@@ -11,6 +11,17 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	position: relative;
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.7);
+	}
 
 	@include desktop {
 		padding: 64px 64px;
@@ -106,4 +117,9 @@
 	@include desktop {
 		transform: translateY(100%);
 	}
+}
+
+.bit-widget-container,
+.tourdates__header {
+	z-index: 1;
 }
